[project]
name = "numbers-db"
version = "0.1.0"
description = "Gives the user information about numbers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.6",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "sounddevice>=0.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
